regression/fail/undetermined.3.sml
val x = ref nil;
val _ = () :: !x
